--- a/Aula1-Calculadora/unit1.lfm
+++ b/Aula1-Calculadora/unit1.lfm
@@ -224,27 +224,7 @@ object Form1: TForm1
         ParentFont = False
         TabOrder = 2
         OnClick = pnDisplayClick
-        object Button1: TButton
-          Left = 13
-          Height = 50
-          Top = 9
-          Width = 64
-          Anchors = []
-          BorderSpacing.Left = 2
-          BorderSpacing.Top = 2
-          BorderSpacing.Right = 2
-          BorderSpacing.Bottom = 2
-          Caption = '1'
-          Color = 15198183
-          Font.CharSet = ANSI_CHARSET
-          Font.Height = -20
-          Font.Name = 'Verdana'
-          Font.Pitch = fpVariable
-          Font.Quality = fqDraft
-          ParentFont = False
-          TabOrder = 0
-        end
-        object Button2: TButton
+        object btn2: TButton
           Left = 92
           Height = 50
           Top = 9
@@ -262,9 +242,10 @@ object Form1: TForm1
           Font.Pitch = fpVariable
           Font.Quality = fqDraft
           ParentFont = False
-          TabOrder = 1
+          TabOrder = 0
+          OnClick = btn2Click
         end
-        object Button3: TButton
+        object btn3: TButton
           Left = 171
           Height = 50
           Top = 9
@@ -282,7 +263,28 @@ object Form1: TForm1
           Font.Pitch = fpVariable
           Font.Quality = fqDraft
           ParentFont = False
+          TabOrder = 1
+        end
+        object btn1: TButton
+          Left = 13
+          Height = 50
+          Top = 9
+          Width = 64
+          Anchors = []
+          BorderSpacing.Left = 2
+          BorderSpacing.Top = 2
+          BorderSpacing.Right = 2
+          BorderSpacing.Bottom = 2
+          Caption = '1'
+          Color = 15198183
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
           TabOrder = 2
+          OnClick = btn1Click
         end
       end
       object pnLinha4: TPanel
@@ -376,11 +378,66 @@ object Form1: TForm1
       Width = 136
       Align = alRight
       BevelOuter = bvNone
+      ClientHeight = 323
+      ClientWidth = 136
       Color = 14671839
       ParentBackground = False
       ParentColor = False
       TabOrder = 1
       OnClick = Panel4Click
+      object pnFundo1: TPanel
+        Left = 0
+        Height = 323
+        Top = 0
+        Width = 136
+        Align = alClient
+        AutoSize = True
+        BevelColor = 12287488
+        BevelInner = bvRaised
+        BevelOuter = bvLowered
+        BevelWidth = 6
+        BorderWidth = 6
+        Color = 12287488
+        DockSite = True
+        ParentBackground = False
+        ParentColor = False
+        TabOrder = 0
+        OnClick = pnFundoClick
+      end
+      object pnFundoBotoes1: TPanel
+        Left = 0
+        Height = 323
+        Top = 0
+        Width = 136
+        Align = alClient
+        BevelColor = 12287488
+        BevelInner = bvRaised
+        BevelOuter = bvSpace
+        ClientHeight = 323
+        ClientWidth = 136
+        Color = 16579836
+        ParentBackground = False
+        ParentColor = False
+        TabOrder = 1
+        OnClick = pnDisplayClick
+        object pnFundoBotoesNumericos1: TPanel
+          AnchorSideLeft.Control = pnFundoBotoes1
+          AnchorSideTop.Control = pnFundoBotoes1
+          AnchorSideBottom.Control = pnFundoBotoes1
+          AnchorSideBottom.Side = asrBottom
+          Left = 2
+          Height = 319
+          Top = 2
+          Width = 249
+          Anchors = [akTop, akLeft, akBottom]
+          BevelOuter = bvNone
+          Color = 14671839
+          ParentBackground = False
+          ParentColor = False
+          TabOrder = 0
+          OnClick = Panel4Click
+        end
+      end
     end
   end
 end
