--- a/Aula1-Calculadora/backup/unit1.lfm
+++ b/Aula1-Calculadora/backup/unit1.lfm
@@ -161,50 +161,6 @@ object Form1: TForm1
       object pnLinha2: TPanel
         Left = 0
         Height = 68
-        Top = 204
-        Width = 249
-        Align = alTop
-        BevelColor = 14671839
-        BevelInner = bvRaised
-        BevelOuter = bvSpace
-        BevelWidth = 2
-        ClientHeight = 68
-        ClientWidth = 249
-        Color = 16579836
-        Font.CharSet = ANSI_CHARSET
-        Font.Height = -20
-        Font.Pitch = fpVariable
-        Font.Quality = fqDraft
-        ParentBackground = False
-        ParentColor = False
-        ParentFont = False
-        TabOrder = 1
-        OnClick = pnDisplayClick
-        object btn0: TButton
-          Left = 11
-          Height = 46
-          Top = 11
-          Width = 227
-          Align = alClient
-          Anchors = []
-          BorderSpacing.Left = 7
-          BorderSpacing.Top = 7
-          BorderSpacing.Right = 7
-          BorderSpacing.Bottom = 7
-          Caption = '0'
-          Color = 15198183
-          Font.CharSet = ANSI_CHARSET
-          Font.Height = -20
-          Font.Name = 'Verdana'
-          Font.Pitch = fpVariable
-          Font.Quality = fqDraft
-          ParentFont = False
-          TabOrder = 0
-        end
-      end
-      object pnLinha3: TPanel
-        Left = 0
-        Height = 68
         Top = 136
         Width = 249
         Align = alTop
@@ -222,91 +178,7 @@ object Form1: TForm1
         ParentBackground = False
         ParentColor = False
         ParentFont = False
-        TabOrder = 2
-        OnClick = pnDisplayClick
-        object Button2: TButton
-          Left = 92
-          Height = 50
-          Top = 9
-          Width = 64
-          Anchors = []
-          BorderSpacing.Left = 2
-          BorderSpacing.Top = 2
-          BorderSpacing.Right = 2
-          BorderSpacing.Bottom = 2
-          Caption = '2'
-          Color = 15198183
-          Font.CharSet = ANSI_CHARSET
-          Font.Height = -20
-          Font.Name = 'Verdana'
-          Font.Pitch = fpVariable
-          Font.Quality = fqDraft
-          ParentFont = False
-          TabOrder = 0
-        end
-        object Button3: TButton
-          Left = 171
-          Height = 50
-          Top = 9
-          Width = 64
-          Anchors = []
-          BorderSpacing.Left = 2
-          BorderSpacing.Top = 2
-          BorderSpacing.Right = 2
-          BorderSpacing.Bottom = 2
-          Caption = '3'
-          Color = 15198183
-          Font.CharSet = ANSI_CHARSET
-          Font.Height = -20
-          Font.Name = 'Verdana'
-          Font.Pitch = fpVariable
-          Font.Quality = fqDraft
-          ParentFont = False
-          TabOrder = 1
-        end
-        object Button1: TButton
-          Left = 13
-          Height = 50
-          Top = 9
-          Width = 64
-          Anchors = []
-          BorderSpacing.Left = 2
-          BorderSpacing.Top = 2
-          BorderSpacing.Right = 2
-          BorderSpacing.Bottom = 2
-          Caption = '1'
-          Color = 15198183
-          Font.CharSet = ANSI_CHARSET
-          Font.Height = -20
-          Font.Name = 'Verdana'
-          Font.Pitch = fpVariable
-          Font.Quality = fqDraft
-          ParentFont = False
-          TabOrder = 2
-          OnClick = Button1Click
-        end
-      end
-      object pnLinha4: TPanel
-        Left = 0
-        Height = 68
-        Top = 68
-        Width = 249
-        Align = alTop
-        BevelColor = 14671839
-        BevelInner = bvRaised
-        BevelOuter = bvSpace
-        BevelWidth = 2
-        ClientHeight = 68
-        ClientWidth = 249
-        Color = 16579836
-        Font.CharSet = ANSI_CHARSET
-        Font.Height = -20
-        Font.Pitch = fpVariable
-        Font.Quality = fqDraft
-        ParentBackground = False
-        ParentColor = False
-        ParentFont = False
-        TabOrder = 3
+        TabOrder = 1
         OnClick = pnDisplayClick
         object btn4: TButton
           Left = 13
@@ -367,6 +239,135 @@ object Form1: TForm1
           Font.Quality = fqDraft
           ParentFont = False
           TabOrder = 2
+        end
+      end
+      object pnLinha3: TPanel
+        Left = 0
+        Height = 68
+        Top = 68
+        Width = 249
+        Align = alTop
+        BevelColor = 14671839
+        BevelInner = bvRaised
+        BevelOuter = bvSpace
+        BevelWidth = 2
+        ClientHeight = 68
+        ClientWidth = 249
+        Color = 16579836
+        Font.CharSet = ANSI_CHARSET
+        Font.Height = -20
+        Font.Pitch = fpVariable
+        Font.Quality = fqDraft
+        ParentBackground = False
+        ParentColor = False
+        ParentFont = False
+        TabOrder = 2
+        OnClick = pnDisplayClick
+        object btn1: TButton
+          Left = 13
+          Height = 50
+          Top = 9
+          Width = 64
+          Anchors = []
+          BorderSpacing.Left = 2
+          BorderSpacing.Top = 2
+          BorderSpacing.Right = 2
+          BorderSpacing.Bottom = 2
+          Caption = '1'
+          Color = 15198183
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 0
+          OnClick = btn1Click
+        end
+        object btn2: TButton
+          Left = 92
+          Height = 50
+          Top = 9
+          Width = 64
+          Anchors = []
+          BorderSpacing.Left = 2
+          BorderSpacing.Top = 2
+          BorderSpacing.Right = 2
+          BorderSpacing.Bottom = 2
+          Caption = '2'
+          Color = 15198183
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 1
+          OnClick = btn2Click
+        end
+        object btn3: TButton
+          Left = 171
+          Height = 50
+          Top = 9
+          Width = 64
+          Anchors = []
+          BorderSpacing.Left = 2
+          BorderSpacing.Top = 2
+          BorderSpacing.Right = 2
+          BorderSpacing.Bottom = 2
+          Caption = '3'
+          Color = 15198183
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 2
+        end
+      end
+      object pnLinha4: TPanel
+        Left = 0
+        Height = 68
+        Top = 204
+        Width = 249
+        Align = alTop
+        BevelColor = 14671839
+        BevelInner = bvRaised
+        BevelOuter = bvSpace
+        BevelWidth = 2
+        ClientHeight = 68
+        ClientWidth = 249
+        Color = 16579836
+        Font.CharSet = ANSI_CHARSET
+        Font.Height = -20
+        Font.Pitch = fpVariable
+        Font.Quality = fqDraft
+        ParentBackground = False
+        ParentColor = False
+        ParentFont = False
+        TabOrder = 3
+        OnClick = pnDisplayClick
+        object btn0: TButton
+          Left = 11
+          Height = 46
+          Top = 11
+          Width = 227
+          Align = alBottom
+          Anchors = []
+          BorderSpacing.Left = 7
+          BorderSpacing.Top = 7
+          BorderSpacing.Right = 7
+          BorderSpacing.Bottom = 7
+          Caption = '0'
+          Color = 15198183
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 0
         end
       end
     end
@@ -435,6 +436,122 @@ object Form1: TForm1
           ParentColor = False
           TabOrder = 0
           OnClick = Panel4Click
+        end
+        object btnLimpar: TButton
+          Left = 4
+          Height = 50
+          Top = 2
+          Width = 128
+          Align = alTop
+          BorderSpacing.Left = 2
+          BorderSpacing.Right = 2
+          Caption = 'LIMPAR'
+          Color = 10329501
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 1
+          OnClick = btnMultiplicacaoClick
+        end
+        object btnDivisao: TButton
+          Left = 4
+          Height = 50
+          Top = 52
+          Width = 128
+          Align = alTop
+          BorderSpacing.Left = 2
+          BorderSpacing.Right = 2
+          Caption = '÷'
+          Color = 15198183
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 2
+          OnClick = btnMultiplicacaoClick
+        end
+        object btnMultiplicacao: TButton
+          Left = 4
+          Height = 50
+          Top = 102
+          Width = 128
+          Align = alTop
+          Anchors = []
+          BorderSpacing.Left = 2
+          BorderSpacing.Right = 2
+          Caption = 'x'
+          Color = 15198183
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 3
+          OnClick = btnMultiplicacaoClick
+        end
+        object btnSubtracao: TButton
+          Left = 4
+          Height = 50
+          Top = 152
+          Width = 128
+          Align = alTop
+          BorderSpacing.Left = 2
+          BorderSpacing.Right = 2
+          Caption = '-'
+          Color = 15198183
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 4
+          OnClick = btnMultiplicacaoClick
+        end
+        object btnSoma: TButton
+          Left = 4
+          Height = 50
+          Top = 202
+          Width = 128
+          Align = alTop
+          BorderSpacing.Left = 2
+          BorderSpacing.Right = 2
+          Caption = '+'
+          Color = 15198183
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 5
+          OnClick = btnMultiplicacaoClick
+        end
+        object btnIgual: TButton
+          Left = 4
+          Height = 50
+          Top = 252
+          Width = 128
+          Align = alTop
+          Anchors = []
+          BorderSpacing.Left = 2
+          BorderSpacing.Right = 2
+          Caption = '='
+          Color = 10329501
+          Font.CharSet = ANSI_CHARSET
+          Font.Height = -20
+          Font.Name = 'Verdana'
+          Font.Pitch = fpVariable
+          Font.Quality = fqDraft
+          ParentFont = False
+          TabOrder = 6
+          OnClick = btnMultiplicacaoClick
         end
       end
     end
